removed issues of viewing in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,7 @@
 .read-the-docs {
   color: #888;
 }
+
+.light {
+  color-scheme: light;
+}
